--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "webpack-node-externals": "^1.7.2"
   },
   "dependencies": {
+    "cors": "^2.8.5",
     "express": "^4.16.4",
     "mongoose": "^5.5.2",
     "yup": "^0.27.0"
